--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -9,6 +9,8 @@
   <style>
     .cms-editor-visual > div > div > div p {
       font-family: monospace;
+      margin: 0;
+      line-height: 1;
     }
   </style>
 </head>
